# uglier

./: pyproject.toml  readme.md  setup.cfg  setup.py
src/uglier/: cli.py  colored_logger.py  patcher.py
src/uglier/tools/: generate_characters.py
test/: test_basic.py  test_classes.py  test_fib.py  test_mandel.py
uglier/: __main__.py  characters.txt  colored_logger.py  patcher.py
