[project]
name = "uglier"
version = "0.0.3"
license = "MIT"
readme = "readme.md"
python = ">=3.9"
homepage = "https://github.com/MonliH/uglier"
repository = "https://github.com/MonliH/uglier"
documentation = "https://github.com/MonliH/uglier"

keywords = ["formatter", "ugly", "uglier"]

[scripts]
uglier = "uglier.cli:run"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
