[metadata]
name = uglier
description = An (alternative) tool to turn your clean python code into a hideous mess.
author = Jonathan Li
license = mit
long-description = file: readme.md
long-description-content-type = text/markdown; charset=UTF-8
platforms = any
project-urls =
    GitHub = https://github.com/MonliH/uglier

packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    uglify
