[metadata]
name = uglier
description = An (alternative) tool to turn your clean python code into a hideous mess.
author = Jonathan Li
license = mit
long_description = file: readme.md
long_description_content_type = text/markdown

project_urls =
    GitHub = https://github.com/MonliH/uglier

version = 0.0.1

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    uglier = uglier.cli:run
